Fixed image sizing and added line spacing.

--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
-/* Sets margin to 0.*/
+/* Sets up whole page.*/
 body {
     margin: 0%;
-    background-color: rgb(255, 255, 255, 0.5);
     background-image: url("tamanna-rumee-53TYpujHw3w-unsplash.jpg");
 }
 
@@ -23,6 +22,7 @@ body {
 
 button {
     cursor: pointer;
+    background-color: rgb(63, 15, 15);
 }
 
 .footer {
@@ -52,15 +52,23 @@ button {
     padding-top: 12px;
     padding-bottom: 12px;
     min-width: 300px;
+    overflow: auto;
 }
 
 .recipe-text {
     padding: 8px;
+    line-height: 150%;
 }
 
+li {
+    line-height: 200%;
+}
+
+/* Images.*/
 .image-split {
-    width: 50%;
-    min-width: 300px;
+    max-height: 100%;
+    max-width: 40%;
     margin: 12px;
     border: 1px solid rgb(109, 27, 27);
+    float: inline-end;
 }
